// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValueInput: index dropdown render options 1`] = `
<select
  name="denomination"
  onChange={[Function]}
  required={true}
  type="select"
  value="1"
>
  <option
    value="1"
  >
    wei
  </option>
  <option
    value="1000000"
  >
    babbage
  </option>
  <option
    value="1000000000000"
  >
    szabo
  </option>
  <option
    value="1000000000000000"
  >
    finney
  </option>
  <option
    value="1000000000000000000"
  >
    ether
  </option>
  <option
    value="1000000000000000000000"
  >
    einstein
  </option>
</select>
`;

exports[`ValueInput: index render component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ValueInput
    name="block"
    placeholder="block"
    title="block"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-select"
        >
          <select
            name="denomination"
            onChange={[Function]}
            required={true}
            type="select"
            value="1"
          >
            <option
              value="1"
            >
              wei
            </option>
            <option
              value="1000000"
            >
              babbage
            </option>
            <option
              value="1000000000000"
            >
              szabo
            </option>
            <option
              value="1000000000000000"
            >
              finney
            </option>
            <option
              value="1000000000000000000"
            >
              ether
            </option>
            <option
              value="1000000000000000000000"
            >
              einstein
            </option>
          </select>
        </div>,
        <div
          className="pt-fill"
        >
          <input
            className="pt-input pt-fill"
            dir="auto"
            id="input-b"
            name="block"
            onChange={[Function]}
            placeholder="block"
            required={true}
            title="block"
            type="text"
            value={0}
          />
        </div>,
      ],
      "className": "pt-control-group",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <select
            name="denomination"
            onChange={[Function]}
            required={true}
            type="select"
            value="1"
          >
            <option
              value="1"
            >
              wei
            </option>
            <option
              value="1000000"
            >
              babbage
            </option>
            <option
              value="1000000000000"
            >
              szabo
            </option>
            <option
              value="1000000000000000"
            >
              finney
            </option>
            <option
              value="1000000000000000000"
            >
              ether
            </option>
            <option
              value="1000000000000000000000"
            >
              einstein
            </option>
          </select>,
          "className": "pt-select",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <option
                value="1"
              >
                wei
              </option>,
              <option
                value="1000000"
              >
                babbage
              </option>,
              <option
                value="1000000000000"
              >
                szabo
              </option>,
              <option
                value="1000000000000000"
              >
                finney
              </option>,
              <option
                value="1000000000000000000"
              >
                ether
              </option>,
              <option
                value="1000000000000000000000"
              >
                einstein
              </option>,
            ],
            "name": "denomination",
            "onChange": [Function],
            "required": true,
            "type": "select",
            "value": "1",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "wei",
              "nodeType": "host",
              "props": Object {
                "children": "wei",
                "value": "1",
              },
              "ref": null,
              "rendered": "wei",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "babbage",
              "nodeType": "host",
              "props": Object {
                "children": "babbage",
                "value": "1000000",
              },
              "ref": null,
              "rendered": "babbage",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "szabo",
              "nodeType": "host",
              "props": Object {
                "children": "szabo",
                "value": "1000000000000",
              },
              "ref": null,
              "rendered": "szabo",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "finney",
              "nodeType": "host",
              "props": Object {
                "children": "finney",
                "value": "1000000000000000",
              },
              "ref": null,
              "rendered": "finney",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "ether",
              "nodeType": "host",
              "props": Object {
                "children": "ether",
                "value": "1000000000000000000",
              },
              "ref": null,
              "rendered": "ether",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "einstein",
              "nodeType": "host",
              "props": Object {
                "children": "einstein",
                "value": "1000000000000000000000",
              },
              "ref": null,
              "rendered": "einstein",
              "type": "option",
            },
          ],
          "type": "select",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="pt-input pt-fill"
            dir="auto"
            id="input-b"
            name="block"
            onChange={[Function]}
            placeholder="block"
            required={true}
            title="block"
            type="text"
            value={0}
          />,
          "className": "pt-fill",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "pt-input pt-fill",
            "dir": "auto",
            "id": "input-b",
            "name": "block",
            "onChange": [Function],
            "placeholder": "block",
            "required": true,
            "title": "block",
            "type": "text",
            "value": 0,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-select"
          >
            <select
              name="denomination"
              onChange={[Function]}
              required={true}
              type="select"
              value="1"
            >
              <option
                value="1"
              >
                wei
              </option>
              <option
                value="1000000"
              >
                babbage
              </option>
              <option
                value="1000000000000"
              >
                szabo
              </option>
              <option
                value="1000000000000000"
              >
                finney
              </option>
              <option
                value="1000000000000000000"
              >
                ether
              </option>
              <option
                value="1000000000000000000000"
              >
                einstein
              </option>
            </select>
          </div>,
          <div
            className="pt-fill"
          >
            <input
              className="pt-input pt-fill"
              dir="auto"
              id="input-b"
              name="block"
              onChange={[Function]}
              placeholder="block"
              required={true}
              title="block"
              type="text"
              value={0}
            />
          </div>,
        ],
        "className": "pt-control-group",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <select
              name="denomination"
              onChange={[Function]}
              required={true}
              type="select"
              value="1"
            >
              <option
                value="1"
              >
                wei
              </option>
              <option
                value="1000000"
              >
                babbage
              </option>
              <option
                value="1000000000000"
              >
                szabo
              </option>
              <option
                value="1000000000000000"
              >
                finney
              </option>
              <option
                value="1000000000000000000"
              >
                ether
              </option>
              <option
                value="1000000000000000000000"
              >
                einstein
              </option>
            </select>,
            "className": "pt-select",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  value="1"
                >
                  wei
                </option>,
                <option
                  value="1000000"
                >
                  babbage
                </option>,
                <option
                  value="1000000000000"
                >
                  szabo
                </option>,
                <option
                  value="1000000000000000"
                >
                  finney
                </option>,
                <option
                  value="1000000000000000000"
                >
                  ether
                </option>,
                <option
                  value="1000000000000000000000"
                >
                  einstein
                </option>,
              ],
              "name": "denomination",
              "onChange": [Function],
              "required": true,
              "type": "select",
              "value": "1",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "wei",
                "nodeType": "host",
                "props": Object {
                  "children": "wei",
                  "value": "1",
                },
                "ref": null,
                "rendered": "wei",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "babbage",
                "nodeType": "host",
                "props": Object {
                  "children": "babbage",
                  "value": "1000000",
                },
                "ref": null,
                "rendered": "babbage",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "szabo",
                "nodeType": "host",
                "props": Object {
                  "children": "szabo",
                  "value": "1000000000000",
                },
                "ref": null,
                "rendered": "szabo",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "finney",
                "nodeType": "host",
                "props": Object {
                  "children": "finney",
                  "value": "1000000000000000",
                },
                "ref": null,
                "rendered": "finney",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "ether",
                "nodeType": "host",
                "props": Object {
                  "children": "ether",
                  "value": "1000000000000000000",
                },
                "ref": null,
                "rendered": "ether",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "einstein",
                "nodeType": "host",
                "props": Object {
                  "children": "einstein",
                  "value": "1000000000000000000000",
                },
                "ref": null,
                "rendered": "einstein",
                "type": "option",
              },
            ],
            "type": "select",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="pt-input pt-fill"
              dir="auto"
              id="input-b"
              name="block"
              onChange={[Function]}
              placeholder="block"
              required={true}
              title="block"
              type="text"
              value={0}
            />,
            "className": "pt-fill",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "pt-input pt-fill",
              "dir": "auto",
              "id": "input-b",
              "name": "block",
              "onChange": [Function],
              "placeholder": "block",
              "required": true,
              "title": "block",
              "type": "text",
              "value": 0,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`ValueInput: index render component without value 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ValueInput
    name={undefined}
    placeholder={undefined}
    title={undefined}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-select"
        >
          <select
            name="denomination"
            onChange={[Function]}
            required={true}
            type="select"
            value="1"
          >
            <option
              value="1"
            >
              wei
            </option>
            <option
              value="1000000"
            >
              babbage
            </option>
            <option
              value="1000000000000"
            >
              szabo
            </option>
            <option
              value="1000000000000000"
            >
              finney
            </option>
            <option
              value="1000000000000000000"
            >
              ether
            </option>
            <option
              value="1000000000000000000000"
            >
              einstein
            </option>
          </select>
        </div>,
        <div
          className="pt-fill"
        >
          <input
            className="pt-input pt-fill"
            dir="auto"
            id="input-b"
            name="value"
            onChange={[Function]}
            placeholder="Value"
            required={true}
            title="Value"
            type="text"
            value={0}
          />
        </div>,
      ],
      "className": "pt-control-group",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <select
            name="denomination"
            onChange={[Function]}
            required={true}
            type="select"
            value="1"
          >
            <option
              value="1"
            >
              wei
            </option>
            <option
              value="1000000"
            >
              babbage
            </option>
            <option
              value="1000000000000"
            >
              szabo
            </option>
            <option
              value="1000000000000000"
            >
              finney
            </option>
            <option
              value="1000000000000000000"
            >
              ether
            </option>
            <option
              value="1000000000000000000000"
            >
              einstein
            </option>
          </select>,
          "className": "pt-select",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <option
                value="1"
              >
                wei
              </option>,
              <option
                value="1000000"
              >
                babbage
              </option>,
              <option
                value="1000000000000"
              >
                szabo
              </option>,
              <option
                value="1000000000000000"
              >
                finney
              </option>,
              <option
                value="1000000000000000000"
              >
                ether
              </option>,
              <option
                value="1000000000000000000000"
              >
                einstein
              </option>,
            ],
            "name": "denomination",
            "onChange": [Function],
            "required": true,
            "type": "select",
            "value": "1",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "wei",
              "nodeType": "host",
              "props": Object {
                "children": "wei",
                "value": "1",
              },
              "ref": null,
              "rendered": "wei",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "babbage",
              "nodeType": "host",
              "props": Object {
                "children": "babbage",
                "value": "1000000",
              },
              "ref": null,
              "rendered": "babbage",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "szabo",
              "nodeType": "host",
              "props": Object {
                "children": "szabo",
                "value": "1000000000000",
              },
              "ref": null,
              "rendered": "szabo",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "finney",
              "nodeType": "host",
              "props": Object {
                "children": "finney",
                "value": "1000000000000000",
              },
              "ref": null,
              "rendered": "finney",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "ether",
              "nodeType": "host",
              "props": Object {
                "children": "ether",
                "value": "1000000000000000000",
              },
              "ref": null,
              "rendered": "ether",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "einstein",
              "nodeType": "host",
              "props": Object {
                "children": "einstein",
                "value": "1000000000000000000000",
              },
              "ref": null,
              "rendered": "einstein",
              "type": "option",
            },
          ],
          "type": "select",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="pt-input pt-fill"
            dir="auto"
            id="input-b"
            name="value"
            onChange={[Function]}
            placeholder="Value"
            required={true}
            title="Value"
            type="text"
            value={0}
          />,
          "className": "pt-fill",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "pt-input pt-fill",
            "dir": "auto",
            "id": "input-b",
            "name": "value",
            "onChange": [Function],
            "placeholder": "Value",
            "required": true,
            "title": "Value",
            "type": "text",
            "value": 0,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-select"
          >
            <select
              name="denomination"
              onChange={[Function]}
              required={true}
              type="select"
              value="1"
            >
              <option
                value="1"
              >
                wei
              </option>
              <option
                value="1000000"
              >
                babbage
              </option>
              <option
                value="1000000000000"
              >
                szabo
              </option>
              <option
                value="1000000000000000"
              >
                finney
              </option>
              <option
                value="1000000000000000000"
              >
                ether
              </option>
              <option
                value="1000000000000000000000"
              >
                einstein
              </option>
            </select>
          </div>,
          <div
            className="pt-fill"
          >
            <input
              className="pt-input pt-fill"
              dir="auto"
              id="input-b"
              name="value"
              onChange={[Function]}
              placeholder="Value"
              required={true}
              title="Value"
              type="text"
              value={0}
            />
          </div>,
        ],
        "className": "pt-control-group",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <select
              name="denomination"
              onChange={[Function]}
              required={true}
              type="select"
              value="1"
            >
              <option
                value="1"
              >
                wei
              </option>
              <option
                value="1000000"
              >
                babbage
              </option>
              <option
                value="1000000000000"
              >
                szabo
              </option>
              <option
                value="1000000000000000"
              >
                finney
              </option>
              <option
                value="1000000000000000000"
              >
                ether
              </option>
              <option
                value="1000000000000000000000"
              >
                einstein
              </option>
            </select>,
            "className": "pt-select",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  value="1"
                >
                  wei
                </option>,
                <option
                  value="1000000"
                >
                  babbage
                </option>,
                <option
                  value="1000000000000"
                >
                  szabo
                </option>,
                <option
                  value="1000000000000000"
                >
                  finney
                </option>,
                <option
                  value="1000000000000000000"
                >
                  ether
                </option>,
                <option
                  value="1000000000000000000000"
                >
                  einstein
                </option>,
              ],
              "name": "denomination",
              "onChange": [Function],
              "required": true,
              "type": "select",
              "value": "1",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "wei",
                "nodeType": "host",
                "props": Object {
                  "children": "wei",
                  "value": "1",
                },
                "ref": null,
                "rendered": "wei",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "babbage",
                "nodeType": "host",
                "props": Object {
                  "children": "babbage",
                  "value": "1000000",
                },
                "ref": null,
                "rendered": "babbage",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "szabo",
                "nodeType": "host",
                "props": Object {
                  "children": "szabo",
                  "value": "1000000000000",
                },
                "ref": null,
                "rendered": "szabo",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "finney",
                "nodeType": "host",
                "props": Object {
                  "children": "finney",
                  "value": "1000000000000000",
                },
                "ref": null,
                "rendered": "finney",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "ether",
                "nodeType": "host",
                "props": Object {
                  "children": "ether",
                  "value": "1000000000000000000",
                },
                "ref": null,
                "rendered": "ether",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "einstein",
                "nodeType": "host",
                "props": Object {
                  "children": "einstein",
                  "value": "1000000000000000000000",
                },
                "ref": null,
                "rendered": "einstein",
                "type": "option",
              },
            ],
            "type": "select",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="pt-input pt-fill"
              dir="auto"
              id="input-b"
              name="value"
              onChange={[Function]}
              placeholder="Value"
              required={true}
              title="Value"
              type="text"
              value={0}
            />,
            "className": "pt-fill",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "pt-input pt-fill",
              "dir": "auto",
              "id": "input-b",
              "name": "value",
              "onChange": [Function],
              "placeholder": "Value",
              "required": true,
              "title": "Value",
              "type": "text",
              "value": 0,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
